# junk

./: metadata_flow_dependencies.sas
branch_cleaner/: branch_cleaner.sh
cheatsheets/: CHEATSHEET_NVIM.md  CHEATSHEET_PODMAN.md  CHEATSHEET_TMUX.md
deployment_manager/: .gitignore  actions.py  bitbucket.py  code_update.py  config.py  constants.py  dictionaries.py  dm.py  mb_config.template
dsmonitor/: .antigravityrules  .cursorrules  .gitignore  .python-version  GEMINI.md  Makefile  README.md  config.example.yaml  pyproject.toml
dsmonitor/src/dsmonitor/: __init__.py  __main__.py  analyzer.py  cli.py  config.py  executor.py  reporter.py  utils.py
dsmonitor/tests/: __init__.py  test_analyzer.py  test_config.py  test_executor.py  test_utils.py
dsmonitor/tests/e2e/: Containerfile  README.md  config_e2e.yaml  generate_test_data.sh  id_rsa  id_rsa.pub
hello_world_podman/: .gitignore  Containerfile  README.md  config.json  pyproject.toml
hello_world_podman/hello_world/src/: cli.py  hello_world.py
jupyterhub/: jupyterhub_podman.sh  prepare_host_for_podman.sh
konfiguracja/: .bashrc  .tmux.conf  .vimrc
konfiguracja/debian/: .bashrc  .tmux.conf
konfiguracja/nowa_konfiguracja/: .tmux.conf  .vimrc
konfiguracja/windows/: .wezterm.lua  .wslconfig  Microsoft.PowerShell_profile.ps1
mb/: .gitignore  README.md  mb.sh
mb_python/: README.md  mb.py  mb_config_sample
nginx/: INSTRUKCJA.md  README.md  nginx.conf  start-nginx.sh
nginx/conf.d/: default.conf
pypro_to_file/: project_archiver.py  project_archiver.sh
(+12 files in other folders)
